--- a/src/content/vehicle/tank/ussr/8_t-62.md
+++ b/src/content/vehicle/tank/ussr/8_t-62.md
@@ -1,7 +1,7 @@
 ---
 info:
   name: T-62
-  image: ./img/vehicle/tank/ussr/8_t-62.png
+  image: /img/vehicle/tank/ussr/8_t-62.png
   class: "ОБТ: 40$ и менее"
   country: СССР
   cost: 20
